syntax = "proto3";
package relayer.chains.tendermint.config;

import "gogoproto/gogo.proto";

option go_package = "github.com/hyperledger-labs/yui-relayer/chains/tendermint";
option (gogoproto.goproto_getters_all) = false;

message ChainConfig {
  string keyring_backend = 1;
  string key = 2;
  string chain_id = 3;
  string tm_chain_id = 4;
  string rpc_addr = 5;
  string account_prefix = 6;
  double gas_adjustment = 7;
  string gas_prices = 8;
  uint64 average_block_time_msec = 9;
  uint64 max_retry_for_commit = 10;
}

message ProverConfig {
  string trusting_period = 1;
  Fraction refresh_threshold_rate = 2;
}

message Fraction {
  uint64 numerator   = 1;
  uint64 denominator = 2;
}
